--- a/firmware/mallard/mallard.ioc
+++ b/firmware/mallard/mallard.ioc
@@ -15,6 +15,7 @@ Mcu.UserName=STM32L496ZGTxP
 PH0-OSC_IN\ (PH0).Signal=RCC_OSC_IN
 PH0-OSC_IN\ (PH0).Locked=true
 PG8.Signal=LPUART1_RX
+SH.ADCx_IN2.0=ADC1_IN2,IN1-Differential
 PG6.Locked=true
 PG8.Locked=true
 RCC.PLLCLKFreq_Value=96000000
@@ -49,16 +50,16 @@ SH.GPXTI13.0=GPIO_EXTI13
 RTC.WakeUpClock-WakeUp=RTC_WAKEUPCLOCK_RTCCLK_DIV16
 RCC.I2C3Freq_Value=7100000
 RCC.LPTIM1Freq_Value=7100000
-Mcu.IP4=SYS
+Mcu.IP4=RTC
 RCC.FCLKCortexFreq_Value=14200000
-Mcu.IP5=USB_HOST
+Mcu.IP5=SYS
+Mcu.IP2=NVIC
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:true\:false
-Mcu.IP2=RCC
-Mcu.IP3=RTC
-Mcu.IP0=LPUART1
+Mcu.IP3=RCC
+Mcu.IP0=ADC1
 PA12.Locked=true
 PA14\ (JTCK/SWCLK).Signal=SYS_JTCK-SWCLK
-Mcu.IP1=NVIC
+Mcu.IP1=LPUART1
 PA12.Signal=USB_OTG_FS_DP
 Mcu.UserConstants=
 RCC.VCOSAI1OutputFreq_Value=96000000
@@ -68,7 +69,7 @@ Mcu.ThirdPartyNb=0
 RCC.SDIOFreq_Value=96000000
 RCC.HCLKFreq_Value=14200000
 RCC.I2C4Freq_Value=7100000
-Mcu.IPNb=7
+Mcu.IPNb=8
 RCC.I2SClocksFreq_Value=48000000
 ProjectManager.PreviousToolchain=
 RCC.APB2TimFreq_Value=14200000
@@ -79,11 +80,11 @@ USB_HOST0.BSP.component=
 RCC.PLLRoutputFreq_Value=96000000
 RTC.IPParameters=WakeUpClock-WakeUp
 PA8.GPIOParameters=GPIO_Label
-Mcu.Pin6=PG5
+Mcu.Pin6=PC1
 RCC.SAI2Freq_Value=48000000
-Mcu.Pin7=PG6
-Mcu.Pin8=PG7
-Mcu.Pin9=PG8
+Mcu.Pin7=PB14
+Mcu.Pin8=PG5
+Mcu.Pin9=PG6
 USB_HOST0.BSP.ip=GPIO
 RCC.AHBFreq_Value=14200000
 RCC.TIM2Freq_Value=72000000
@@ -94,7 +95,8 @@ Mcu.Pin3=PH0-OSC_IN (PH0)
 RCC.USART3Freq_Value=7100000
 Mcu.Pin4=PH1-OSC_OUT (PH1)
 NVIC.EXTI15_10_IRQn=true\:0\:0\:false\:false\:true\:true\:true
-Mcu.Pin5=PB14
+Mcu.Pin5=PC0
+ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_1
 ProjectManager.ProjectBuild=false
 RCC.HSE_VALUE=8000000
 PG13.Locked=true
@@ -111,6 +113,7 @@ PA13\ (JTMS/SWDIO).GPIO_Label=TMS
 ProjectManager.BackupPrevious=false
 RCC.VCOInputFreq_Value=4800000
 PG12.GPIOParameters=GPIO_Label
+SH.ADCx_IN1.ConfNb=1
 File.Version=6
 PA10.GPIO_Label=USB_ID
 PB7.Signal=GPIO_Output
@@ -122,6 +125,7 @@ PA13\ (JTMS/SWDIO).Locked=true
 USB_HOST0.BSP.i2creg=0
 RCC.PLLI2SoutputFreq_Value=48000000
 ProjectManager.HalAssertFull=false
+ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
 ProjectManager.ProjectName=mallard
 RCC.TIM1Freq_Value=72000000
 RCC.PLLMCOFreq_Value=72000000
@@ -151,6 +155,7 @@ RCC.TIM16Freq_Value=72000000
 PC14-OSC32_IN\ (PC14).Locked=true
 USB_HOST0.BSP.name=Drive_VBUS_FS
 PA14\ (JTCK/SWCLK).GPIO_Label=TCK
+SH.ADCx_IN1.0=ADC1_IN1,IN1-Differential
 RCC.PLLPoutputFreq_Value=170400000
 RCC.APB1TimFreq_Value=14200000
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
@@ -173,13 +178,16 @@ RCC.PLLQoutputFreq_Value=170400000
 ProjectManager.ProjectFileName=mallard.ioc
 RCC.ADC12outputFreq_Value=72000000
 PG7.Locked=true
+ADC1.Rank-0\#ChannelRegularConversion=1
 PG7.Signal=LPUART1_TX
 PA13\ (JTMS/SWDIO).Mode=Trace_Asynchronous_SW
-Mcu.PinsNb=27
+Mcu.PinsNb=29
 ProjectManager.NoMain=false
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,master,SingleDiff-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,NbrOfConversionFlag
 PC13.Locked=true
 PG5.Locked=true
 PG5.Signal=GPIO_Input
+ADC1.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
 PC13.Signal=GPXTI13
 PA9.GPIO_Label=USB_VBUS
 RCC.FMPI2C1Freq_Value=8000000
@@ -191,6 +199,7 @@ PA11.GPIO_Label=USB_DM
 ProjectManager.DefaultFWLocation=true
 PC15-OSC32_OUT\ (PC15).Signal=RCC_OSC32_OUT
 ProjectManager.DeletePrevious=true
+PC0.Signal=ADCx_IN1
 PB14.Locked=true
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
 RCC.VCOSAI2OutputFreq_Value=38400000
@@ -206,6 +215,7 @@ USB_HOST0.BSP.semaphore=
 RCC.WatchDogFreq_Value=32000
 USB_HOST0.BSP.STBoard=false
 PG8.GPIO_Label=STLK_TX [STM32F103CBT6_PA2]
+ADC1.SingleDiff-0\#ChannelRegularConversion=ADC_DIFFERENTIAL_ENDED
 PA11.Locked=true
 PA8.GPIO_Label=USB_SOF [TP1]
 PB3\ (JTDO/TRACESWO).Locked=true
@@ -223,8 +233,8 @@ RCC.USBFreq_Value=48000000
 PG7.Mode=Asynchronous
 RCC.PLLSAI1PoutputFreq_Value=48000000
 RCC.VCOI2SOutputFreq_Value=192000000
-PG6.GPIOParameters=GPIO_Label
 PB14.Signal=GPIO_Output
+PG6.GPIOParameters=GPIO_Label
 RCC.PLLSAI2RoutputFreq_Value=19200000
 PH1-OSC_OUT\ (PH1).Locked=true
 board=NUCLEO-L496ZG-P
@@ -242,8 +252,9 @@ RCC.I2C1Freq_Value=7100000
 RCC.PLLI2SPCLKFreq_Value=48000000
 PC13.GPIOParameters=GPIO_Label
 PG7.GPIO_Label=STLK_RX [STM32F103CBT6_PA3]
-RCC.RNGFreq_Value=48000000
 RCC.LCDFreq_Value=32000
+RCC.RNGFreq_Value=48000000
+SH.ADCx_IN2.ConfNb=1
 RCC.PLLSAI1QoutputFreq_Value=48000000
 RCC.ADCFreq_Value=48000000
 PA10.GPIOParameters=GPIO_Label
@@ -259,19 +270,23 @@ ProjectManager.AskForMigrate=true
 Mcu.Name=STM32L496ZGTxP
 RCC.LPTIM2Freq_Value=7100000
 RCC.PLLI2SQCLKFreq_Value=96000000
-Mcu.Pin26=VP_USB_HOST_VS_USB_HOST_AUDIO_FS
+Mcu.Pin26=VP_RTC_VS_RTC_WakeUp_intern
+Mcu.Pin27=VP_SYS_VS_Systick
 RCC.RTCHSEDivFreq_Value=4000000
-Mcu.Pin24=VP_RTC_VS_RTC_WakeUp_intern
+Mcu.Pin24=PB7
 ProjectManager.UnderRoot=true
-Mcu.Pin25=VP_SYS_VS_Systick
-Mcu.IP6=USB_OTG_FS
+Mcu.Pin25=VP_RTC_VS_RTC_Activate
+Mcu.Pin28=VP_USB_HOST_VS_USB_HOST_AUDIO_FS
+Mcu.IP6=USB_HOST
+Mcu.IP7=USB_OTG_FS
 ProjectManager.CoupleFile=false
 RCC.48MHZClocksFreq_Value=24000000
 RCC.SYSCLKFreq_VALUE=56800000
-Mcu.Pin22=PB7
-Mcu.Pin23=VP_RTC_VS_RTC_Activate
-Mcu.Pin20=PG13
-Mcu.Pin21=PB3 (JTDO/TRACESWO)
+Mcu.Pin22=PG13
+Mcu.Pin23=PB3 (JTDO/TRACESWO)
+Mcu.Pin20=PG11
+ADC1.master=1
+Mcu.Pin21=PG12
 PA12.Mode=Host_Only
 PA10.Locked=true
 NVIC.ForceEnableDMAVector=true
@@ -283,36 +298,39 @@ NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 ProjectManager.CompilerOptimize=6
 PA11.Signal=USB_OTG_FS_DM
 ProjectManager.HeapSize=0x200
-Mcu.Pin15=PA13 (JTMS/SWDIO)
+Mcu.Pin15=PA11
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
-Mcu.Pin16=PA14 (JTCK/SWCLK)
-Mcu.Pin13=PA11
-Mcu.Pin14=PA12
+Mcu.Pin16=PA12
+Mcu.Pin13=PA9
+Mcu.Pin14=PA10
+Mcu.Pin19=PG10
 PG12.GPIO_Label=SMPS_PG [PG_ST1PS02D1QTR]
-Mcu.Pin19=PG12
 RCC.TIM20Freq_Value=72000000
 ProjectManager.ComputerToolchain=false
-Mcu.Pin17=PG10
+Mcu.Pin17=PA13 (JTMS/SWDIO)
 RCC.HSI_VALUE=16000000
-Mcu.Pin18=PG11
+Mcu.Pin18=PA14 (JTCK/SWCLK)
 VP_RTC_VS_RTC_WakeUp_intern.Mode=WakeUp
 RCC.TIM3Freq_Value=72000000
 USB_HOST.USBH_HandleTypeDef=hUsbHostFS
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 RCC.PLLR=RCC_PLLR_DIV6
+ADC1.NbrOfConversionFlag=1
 PH0-OSC_IN\ (PH0).GPIO_Label=MCO
-Mcu.Pin11=PA9
-Mcu.Pin12=PA10
+Mcu.Pin11=PG8
+Mcu.Pin12=PA8
 RCC.PLLM=5
 PB3\ (JTDO/TRACESWO).Mode=Trace_Asynchronous_SW
 RCC.PLLN=71
-Mcu.Pin10=PA8
+Mcu.Pin10=PG7
 PB7.Locked=true
 RCC.PWRFreq_Value=56800000
 RCC.I2C2Freq_Value=7100000
 RCC.APB1Freq_Value=7100000
 USB_HOST0.BSP.mode=Output
+PC0.Locked=true
 ProjectManager.DeviceId=STM32L496ZGTxP
+PC1.Signal=ADCx_IN2
 PG7.GPIOParameters=GPIO_Label
 PG10.GPIO_Label=SMPS_V1 [D0_D1_ST1PS02D1QTR]
 ProjectManager.LibraryCopy=1
