Added code in main to read and store from ADC1

--- a/firmware/mallard/mallard.ioc
+++ b/firmware/mallard/mallard.ioc
@@ -26,7 +26,7 @@ NVIC.RTC_WKUP_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 RCC.PLLQCLKFreq_Value=96000000
 RCC.SYSCLKSourceVirtual=RCC_SYSCLKSOURCE_PLLCLK
 PA12.GPIOParameters=GPIO_Label
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,4-MX_USB_HOST_Init-USB_HOST-false-HAL-false,5-MX_RTC_Init-RTC-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,4-MX_USB_HOST_Init-USB_HOST-false-HAL-false,5-MX_RTC_Init-RTC-false-HAL-true,6-MX_ADC1_Init-ADC1-false-HAL-true
 PA9.GPIOParameters=GPIO_Label
 PA11.GPIOParameters=GPIO_Label
 USB_HOST0.BSP.condition=
@@ -338,4 +338,3 @@ PA13\ (JTMS/SWDIO).Signal=SYS_JTMS-SWDIO
 PG11.GPIOParameters=GPIO_Label
 PH0-OSC_IN\ (PH0).GPIOParameters=GPIO_Label
 USB_HOST0.BSP.instance=PG6
-isbadioc=false
