--- a/firmware/mallard/mallard.ioc
+++ b/firmware/mallard/mallard.ioc
@@ -79,11 +79,11 @@ USB_HOST0.BSP.component=
 RCC.PLLRoutputFreq_Value=96000000
 RTC.IPParameters=WakeUpClock-WakeUp
 PA8.GPIOParameters=GPIO_Label
-Mcu.Pin6=PB14
+Mcu.Pin6=PA3
 RCC.SAI2Freq_Value=48000000
-Mcu.Pin7=PG5
-Mcu.Pin8=PG6
-Mcu.Pin9=PG7
+Mcu.Pin7=PA4
+Mcu.Pin8=PB14
+Mcu.Pin9=PG5
 USB_HOST0.BSP.ip=GPIO
 RCC.AHBFreq_Value=14200000
 RCC.TIM2Freq_Value=72000000
@@ -115,6 +115,7 @@ PG12.GPIOParameters=GPIO_Label
 SH.ADCx_IN1.ConfNb=1
 File.Version=6
 PA10.GPIO_Label=USB_ID
+SH.ADCx_IN8.0=ADC1_IN8,IN8-Differential
 PB7.Signal=GPIO_Output
 PA8.Signal=USB_OTG_FS_SOF
 PA14\ (JTCK/SWCLK).Mode=Serial_Wire
@@ -150,6 +151,7 @@ PA10.Signal=USB_OTG_FS_ID
 USB_OTG_FS.VirtualMode=Host_Only
 RCC.DFSDMFreq_Value=7100000
 PB14.GPIOParameters=GPIO_Label
+SH.ADCx_IN9.0=ADC1_IN9,IN8-Differential
 RCC.TIM16Freq_Value=72000000
 PC14-OSC32_IN\ (PC14).Locked=true
 USB_HOST0.BSP.name=Drive_VBUS_FS
@@ -160,6 +162,7 @@ RCC.APB1TimFreq_Value=14200000
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 RCC.LPUART1Freq_Value=7100000
 PG11.GPIO_Label=SMPS_EN [EN_ST1PS20D1QTR]
+SH.ADCx_IN9.ConfNb=1
 USB_OTG_FS.IPParameters=VirtualMode,phy_itface
 RCC.PLLI2SQoutputFreq_Value=96000000
 RCC.DFSDMAudioFreq_Value=96000000
@@ -168,6 +171,7 @@ ProjectManager.CustomerFirmwarePackage=
 RCC.MSIClockRange=RCC_MSIRANGE_9
 RCC.HSI48_VALUE=48000000
 RCC.PLLSAI1N=20
+PA3.Signal=ADCx_IN8
 PG12.Signal=GPIO_Input
 VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
 PB3\ (JTDO/TRACESWO).GPIO_Label=SWO
@@ -180,7 +184,7 @@ PG7.Locked=true
 ADC1.Rank-0\#ChannelRegularConversion=1
 PG7.Signal=LPUART1_TX
 PA13\ (JTMS/SWDIO).Mode=Serial_Wire
-Mcu.PinsNb=28
+Mcu.PinsNb=30
 ProjectManager.NoMain=false
 ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,NbrOfConversionFlag,master
 PC13.Locked=true
@@ -260,6 +264,7 @@ RCC.EthernetFreq_Value=8000000
 PA9.Locked=true
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 RCC.AHBCLKDivider=RCC_SYSCLK_DIV4
+SH.ADCx_IN8.ConfNb=1
 RCC.UART5Freq_Value=7100000
 ProjectManager.FreePins=false
 RCC.IPParameters=48MHZClocksFreq_Value,ADC12outputFreq_Value,ADC34outputFreq_Value,ADCFreq_Value,AHBCLKDivider,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,DFSDM2Freq_Value,DFSDMAudioFreq_Value,DFSDMFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FMPI2C1Freq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,I2S1Freq_Value,I2S2Freq_Value,I2SClocksFreq_Value,LCDFreq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTimerFreq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSI_VALUE,MCO1PinFreq_Value,MCO2PinFreq_Value,MCOFreq_Value,MSIClockRange,MSI_VALUE,PLLCLKFreq_Value,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SQoutputFreq_Value,PLLI2SRCLKFreq_Value,PLLI2SoutputFreq_Value,PLLM,PLLMCOFreq_Value,PLLMUL,PLLN,PLLPoutputFreq_Value,PLLQCLKFreq_Value,PLLQoutputFreq_Value,PLLR,PLLRCLKFreq_Value,PLLRoutputFreq_Value,PLLSAI1N,PLLSAI1PoutputFreq_Value,PLLSAI1QoutputFreq_Value,PLLSAI1RoutputFreq_Value,PLLSAI2PoutputFreq_Value,PLLSAI2RoutputFreq_Value,PRESCALERUSB,PWRFreq_Value,RNGFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SAI1AFreq_Value,SAI1BFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDIOFreq_Value,SDMMCFreq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,SYSCLKSourceVirtual,TIM15Freq_Value,TIM16Freq_Value,TIM17Freq_Value,TIM1Freq_Value,TIM20Freq_Value,TIM2Freq_Value,TIM3Freq_Value,TIM8Freq_Value,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOI2SInputFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOInputMFreq_Value,VCOOutput2Freq_Value,VCOOutputFreq_Value,VCOSAI1OutputFreq_Value,VCOSAI2OutputFreq_Value,VcooutputI2S,WatchDogFreq_Value
@@ -267,22 +272,25 @@ ProjectManager.AskForMigrate=true
 Mcu.Name=STM32L496ZGTxP
 RCC.LPTIM2Freq_Value=7100000
 RCC.PLLI2SQCLKFreq_Value=96000000
-Mcu.Pin26=VP_SYS_VS_Systick
-Mcu.Pin27=VP_USB_HOST_VS_USB_HOST_AUDIO_FS
+Mcu.Pin26=VP_RTC_VS_RTC_Activate
+Mcu.Pin27=VP_RTC_VS_RTC_WakeUp_intern
 RCC.RTCHSEDivFreq_Value=4000000
-Mcu.Pin24=VP_RTC_VS_RTC_Activate
+Mcu.Pin24=PB3 (JTDO/TRACESWO)
 ProjectManager.UnderRoot=true
-Mcu.Pin25=VP_RTC_VS_RTC_WakeUp_intern
+Mcu.Pin25=PB7
+Mcu.Pin28=VP_SYS_VS_Systick
 Mcu.IP6=USB_HOST
+Mcu.Pin29=VP_USB_HOST_VS_USB_HOST_AUDIO_FS
 Mcu.IP7=USB_OTG_FS
 ProjectManager.CoupleFile=false
 RCC.48MHZClocksFreq_Value=24000000
+PA4.Signal=ADCx_IN9
 RCC.SYSCLKFreq_VALUE=56800000
-Mcu.Pin22=PB3 (JTDO/TRACESWO)
-Mcu.Pin23=PB7
-Mcu.Pin20=PG12
+Mcu.Pin22=PG12
+Mcu.Pin23=PG13
+Mcu.Pin20=PG10
 ADC1.master=1
-Mcu.Pin21=PG13
+Mcu.Pin21=PG11
 PA12.Mode=Host_Only
 PA10.Locked=true
 NVIC.ForceEnableDMAVector=true
@@ -294,18 +302,18 @@ NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 ProjectManager.CompilerOptimize=6
 PA11.Signal=USB_OTG_FS_DM
 ProjectManager.HeapSize=0x200
-Mcu.Pin15=PA12
+Mcu.Pin15=PA10
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
-Mcu.Pin16=PA13 (JTMS/SWDIO)
-Mcu.Pin13=PA10
-Mcu.Pin14=PA11
-Mcu.Pin19=PG11
+Mcu.Pin16=PA11
+Mcu.Pin13=PA8
+Mcu.Pin14=PA9
+Mcu.Pin19=PA14 (JTCK/SWCLK)
 PG12.GPIO_Label=SMPS_PG [PG_ST1PS02D1QTR]
 RCC.TIM20Freq_Value=72000000
 ProjectManager.ComputerToolchain=false
-Mcu.Pin17=PA14 (JTCK/SWCLK)
+Mcu.Pin17=PA12
 RCC.HSI_VALUE=16000000
-Mcu.Pin18=PG10
+Mcu.Pin18=PA13 (JTMS/SWDIO)
 VP_RTC_VS_RTC_WakeUp_intern.Mode=WakeUp
 RCC.TIM3Freq_Value=72000000
 USB_HOST.USBH_HandleTypeDef=hUsbHostFS
@@ -313,11 +321,11 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 RCC.PLLR=RCC_PLLR_DIV6
 ADC1.NbrOfConversionFlag=1
 PH0-OSC_IN\ (PH0).GPIO_Label=MCO
-Mcu.Pin11=PA8
-Mcu.Pin12=PA9
+Mcu.Pin11=PG7
+Mcu.Pin12=PG8
 RCC.PLLM=5
 RCC.PLLN=71
-Mcu.Pin10=PG8
+Mcu.Pin10=PG6
 PB7.Locked=true
 RCC.PWRFreq_Value=56800000
 RCC.I2C2Freq_Value=7100000
