--- a/firmware/mallard/mallard.ioc
+++ b/firmware/mallard/mallard.ioc
@@ -1,13 +1,22 @@
 #MicroXplorer Configuration settings - do not modify
+ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_16
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,NbrOfConversionFlag,master
+ADC1.NbrOfConversionFlag=1
+ADC1.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC1.Rank-0\#ChannelRegularConversion=1
+ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
+ADC1.master=1
 File.Version=6
 KeepUserPlacement=false
 Mcu.Family=STM32L4
-Mcu.IP0=NVIC
-Mcu.IP1=RCC
-Mcu.IP2=SYS
-Mcu.IP3=USB_HOST
-Mcu.IP4=USB_OTG_FS
-Mcu.IPNb=5
+Mcu.IP0=ADC1
+Mcu.IP1=NVIC
+Mcu.IP2=RCC
+Mcu.IP3=SYS
+Mcu.IP4=USART1
+Mcu.IP5=USB_HOST
+Mcu.IP6=USB_OTG_FS
+Mcu.IPNb=7
 Mcu.Name=STM32L4Q5CGTx
 Mcu.Package=LQFP48
 Mcu.Pin0=PA0
@@ -15,15 +24,17 @@ Mcu.Pin1=PA1
 Mcu.Pin10=PB10
 Mcu.Pin11=PB12
 Mcu.Pin12=PB13
-Mcu.Pin13=PA9
-Mcu.Pin14=PA10
-Mcu.Pin15=PA11
-Mcu.Pin16=PA12
-Mcu.Pin17=PA13 (JTMS/SWDIO)
-Mcu.Pin18=PA14 (JTCK/SWCLK)
-Mcu.Pin19=VP_SYS_VS_Systick
+Mcu.Pin13=PA8
+Mcu.Pin14=PA9
+Mcu.Pin15=PA10
+Mcu.Pin16=PA11
+Mcu.Pin17=PA12
+Mcu.Pin18=PA13 (JTMS/SWDIO)
+Mcu.Pin19=PA14 (JTCK/SWCLK)
 Mcu.Pin2=PA2
-Mcu.Pin20=VP_USB_HOST_VS_USB_HOST_MTP_FS
+Mcu.Pin20=PB5
+Mcu.Pin21=VP_SYS_VS_Systick
+Mcu.Pin22=VP_USB_HOST_VS_USB_HOST_MTP_FS
 Mcu.Pin3=PA3
 Mcu.Pin4=PA4
 Mcu.Pin5=PA5
@@ -31,7 +42,7 @@ Mcu.Pin6=PA6
 Mcu.Pin7=PA7
 Mcu.Pin8=PB0
 Mcu.Pin9=PB1
-Mcu.PinsNb=21
+Mcu.PinsNb=23
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L4Q5CGTx
@@ -53,7 +64,7 @@ PA0.Locked=true
 PA0.Signal=ADCx_IN5
 PA1.Locked=true
 PA1.Signal=ADCx_IN6
-PA10.Locked=true
+PA10.Mode=Synchronous
 PA10.Signal=USART1_RX
 PA11.Mode=Host_Only
 PA11.Signal=USB_OTG_FS_DM
@@ -75,7 +86,10 @@ PA6.Locked=true
 PA6.Signal=GPIO_Output
 PA7.Locked=true
 PA7.Signal=GPIO_Output
+PA8.Mode=Clock-out
+PA8.Signal=RCC_MCO
 PA9.Locked=true
+PA9.Mode=Synchronous
 PA9.Signal=USART1_TX
 PB0.Locked=true
 PB0.Signal=GPIO_Output
@@ -87,6 +101,8 @@ PB12.Locked=true
 PB12.Signal=GPIO_Output
 PB13.Locked=true
 PB13.Signal=GPIO_Output
+PB5.Mode=Synchronous
+PB5.Signal=USART1_CK
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -115,43 +131,77 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USB_HOST_Init-USB_HOST-false-HAL-false
+RCC.ADCFreq_Value=48000000
+RCC.AHBFreq_Value=120000000
+RCC.APB1Freq_Value=120000000
+RCC.APB1TimFreq_Value=120000000
+RCC.APB2Freq_Value=120000000
+RCC.APB2TimFreq_Value=120000000
 RCC.CRSFreq_Value=48000000
+RCC.CortexFreq_Value=120000000
+RCC.DFSDMFreq_Value=120000000
+RCC.FCLKCortexFreq_Value=120000000
 RCC.FamilyName=M
+RCC.HCLKFreq_Value=120000000
 RCC.HSE_VALUE=8000000
 RCC.HSI48_VALUE=48000000
 RCC.HSI_VALUE=16000000
-RCC.IPParameters=CRSFreq_Value,FamilyName,HSE_VALUE,HSI48_VALUE,HSI_VALUE,LCDTFTFreq_Value,LSCOPinFreq_Value,LSE_VALUE,LSI_VALUE,MSI_VALUE,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PLLSAI1PoutputFreq_Value,PLLSAI1QoutputFreq_Value,PLLSAI1RoutputFreq_Value,PLLSAI2PoutputFreq_Value,PLLSAI2QoutputFreq_Value,PLLSAI2RoutputFreq_Value,SAI1Freq_Value,SAI2Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAI1OutputFreq_Value,VCOSAI2OutputFreq_Value
+RCC.I2C1Freq_Value=120000000
+RCC.I2C2Freq_Value=120000000
+RCC.I2C3Freq_Value=120000000
+RCC.I2C4Freq_Value=120000000
+RCC.IPParameters=ADCFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CRSFreq_Value,CortexFreq_Value,DFSDMFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,LCDTFTFreq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,MSI_VALUE,OCTOSPIMFreq_Value,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PLLSAI1N,PLLSAI1PoutputFreq_Value,PLLSAI1QoutputFreq_Value,PLLSAI1RoutputFreq_Value,PLLSAI2PoutputFreq_Value,PLLSAI2QoutputFreq_Value,PLLSAI2RoutputFreq_Value,PWRFreq_Value,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMCFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAI1OutputFreq_Value,VCOSAI2OutputFreq_Value
 RCC.LCDTFTFreq_Value=8000000
+RCC.LPTIM1Freq_Value=120000000
+RCC.LPTIM2Freq_Value=120000000
+RCC.LPUART1Freq_Value=120000000
 RCC.LSCOPinFreq_Value=32000
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
+RCC.MCO1PinFreq_Value=120000000
 RCC.MSI_VALUE=4000000
-RCC.PLLPoutputFreq_Value=16000000
-RCC.PLLQoutputFreq_Value=16000000
-RCC.PLLRCLKFreq_Value=16000000
-RCC.PLLSAI1PoutputFreq_Value=16000000
-RCC.PLLSAI1QoutputFreq_Value=16000000
-RCC.PLLSAI1RoutputFreq_Value=16000000
+RCC.OCTOSPIMFreq_Value=120000000
+RCC.PLLN=60
+RCC.PLLPoutputFreq_Value=120000000
+RCC.PLLQoutputFreq_Value=120000000
+RCC.PLLRCLKFreq_Value=120000000
+RCC.PLLSAI1N=24
+RCC.PLLSAI1PoutputFreq_Value=48000000
+RCC.PLLSAI1QoutputFreq_Value=48000000
+RCC.PLLSAI1RoutputFreq_Value=48000000
 RCC.PLLSAI2PoutputFreq_Value=16000000
 RCC.PLLSAI2QoutputFreq_Value=16000000
 RCC.PLLSAI2RoutputFreq_Value=16000000
-RCC.SAI1Freq_Value=16000000
-RCC.SAI2Freq_Value=16000000
+RCC.PWRFreq_Value=120000000
+RCC.RNGFreq_Value=48000000
+RCC.SAI1Freq_Value=48000000
+RCC.SAI2Freq_Value=48000000
+RCC.SDMMCFreq_Value=120000000
+RCC.SYSCLKFreq_VALUE=120000000
+RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
+RCC.UART4Freq_Value=120000000
+RCC.UART5Freq_Value=120000000
+RCC.USART1Freq_Value=120000000
+RCC.USART2Freq_Value=120000000
+RCC.USART3Freq_Value=120000000
+RCC.USBFreq_Value=48000000
 RCC.VCOInput2Freq_Value=4000000
 RCC.VCOInput3Freq_Value=4000000
 RCC.VCOInputFreq_Value=4000000
-RCC.VCOOutputFreq_Value=32000000
-RCC.VCOSAI1OutputFreq_Value=32000000
+RCC.VCOOutputFreq_Value=240000000
+RCC.VCOSAI1OutputFreq_Value=96000000
 RCC.VCOSAI2OutputFreq_Value=32000000
-SH.ADCx_IN16.0=ADC1_IN16
+SH.ADCx_IN16.0=ADC1_IN16,IN16-Single-Ended
 SH.ADCx_IN16.ConfNb=1
-SH.ADCx_IN5.0=ADC1_IN5
+SH.ADCx_IN5.0=ADC1_IN5,IN5-Single-Ended
 SH.ADCx_IN5.ConfNb=1
-SH.ADCx_IN6.0=ADC1_IN6
+SH.ADCx_IN6.0=ADC1_IN6,IN6-Single-Ended
 SH.ADCx_IN6.ConfNb=1
-SH.ADCx_IN7.0=ADC1_IN7
+SH.ADCx_IN7.0=ADC1_IN7,IN7-Single-Ended
 SH.ADCx_IN7.ConfNb=1
+USART1.IPParameters=VirtualMode-Synchronous
+USART1.VirtualMode-Synchronous=VM_SYNC
 USB_HOST.IPParameters=VirtualModeFS
 USB_HOST.VirtualModeFS=Mtp
 USB_OTG_FS.IPParameters=VirtualMode,phy_itface
