--- a/firmware/mallard/mallard.ioc
+++ b/firmware/mallard/mallard.ioc
@@ -1,6 +1,7 @@
 #MicroXplorer Configuration settings - do not modify
-ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_16
-ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,NbrOfConversionFlag,master
+ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_5
+ADC1.ClockPrescaler=ADC_CLOCK_SYNC_PCLK_DIV4
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,NbrOfConversionFlag,ClockPrescaler,master
 ADC1.NbrOfConversionFlag=1
 ADC1.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC1.Rank-0\#ChannelRegularConversion=1
@@ -42,9 +43,10 @@ Mcu.Pin2=PA0
 Mcu.Pin20=PA12
 Mcu.Pin21=PA13 (JTMS/SWDIO)
 Mcu.Pin22=PA14 (JTCK/SWCLK)
-Mcu.Pin23=VP_FATFS_VS_USB
-Mcu.Pin24=VP_SYS_VS_Systick
-Mcu.Pin25=VP_USB_HOST_VS_USB_HOST_MSC_FS
+Mcu.Pin23=PB4 (NJTRST)
+Mcu.Pin24=VP_FATFS_VS_USB
+Mcu.Pin25=VP_SYS_VS_Systick
+Mcu.Pin26=VP_USB_HOST_VS_USB_HOST_MSC_FS
 Mcu.Pin3=PA1
 Mcu.Pin4=PA2
 Mcu.Pin5=PA3
@@ -52,7 +54,7 @@ Mcu.Pin6=PA4
 Mcu.Pin7=PA5
 Mcu.Pin8=PA6
 Mcu.Pin9=PA7
-Mcu.PinsNb=26
+Mcu.PinsNb=27
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L4Q5CGTx
@@ -97,15 +99,12 @@ PA3.GPIOParameters=GPIO_Label
 PA3.GPIO_Label=Temp Sense 2
 PA3.Locked=true
 PA3.Signal=ADCx_IN8
-PA4.GPIOParameters=GPIO_Label
-PA4.GPIO_Label=Eh Sense 2
 PA4.Locked=true
 PA4.Signal=ADCx_IN9
 PA5.GPIOParameters=GPIO_Label
 PA5.GPIO_Label=Temp Sense 3
 PA5.Signal=ADCx_IN10
-PA6.GPIOParameters=GPIO_Label
-PA6.GPIO_Label=Eh Sense 3
+PA6.Locked=true
 PA6.Signal=ADCx_IN11
 PA7.Locked=true
 PA7.Signal=GPIO_Output
@@ -134,6 +133,8 @@ PB14.GPIOParameters=GPIO_Label
 PB14.GPIO_Label=_5V_SHDN
 PB14.Locked=true
 PB14.Signal=GPIO_Output
+PB4\ (NJTRST).Locked=true
+PB4\ (NJTRST).Signal=GPIO_Output
 PC13.Signal=GPIO_Output
 PC14-OSC32_IN\ (PC14).Signal=GPIO_Output
 PinOutPanel.RotationAngle=0
@@ -164,7 +165,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USB_HOST_Init-USB_HOST-false-HAL-false,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_USART1_Init-USART1-false-HAL-true,6-MX_FATFS_Init-FATFS-false-HAL-false
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USB_HOST_Init-USB_HOST-false-HAL-false,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_FATFS_Init-FATFS-false-HAL-false
 RCC.ADCFreq_Value=48000000
 RCC.AHBFreq_Value=120000000
 RCC.APB1Freq_Value=120000000
@@ -241,7 +242,8 @@ SH.ADCx_IN8.0=ADC1_IN8,IN8-Single-Ended
 SH.ADCx_IN8.ConfNb=1
 SH.ADCx_IN9.0=ADC1_IN9,IN9-Single-Ended
 SH.ADCx_IN9.ConfNb=1
-USART1.IPParameters=VirtualMode-Asynchronous
+USART1.BaudRate=9600
+USART1.IPParameters=VirtualMode-Asynchronous,BaudRate
 USART1.VirtualMode-Asynchronous=VM_ASYNC
 USB_HOST.IPParameters=VirtualModeFS,USBH_HandleTypeDef
 USB_HOST.USBH_HandleTypeDef=hUsbHostFS
